--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,24 @@ body {
 }
 
 /* Styling the rules section */
+.toggle-rules-button {
+  padding: 15px 30px;
+  font-size: 18px;
+  background-color: #ffd700; 
+  color: black;
+  border: 2px solid white;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin-bottom: 20px;
+  font-family: "Poppins", sans-serif;
+}
+
+.toggle-rules-button:hover {
+  background-color: #ffeb3b;
+  transform: scale(1.05);
+  box-shadow: 0 4px 10px rgba(255, 255, 0, 0.4);
+}
 .rules {
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(5px);
@@ -65,15 +83,6 @@ body {
   position: relative;
   text-align: left;
 }
-
-/* Adding fun icons */
-/* .rules li::before {
-  content: "⭐"; 
-  position: absolute;
-  left: 0;
-  font-size: 18px;
-  color: #ffd700;
-} */
 
 .emoji {
   font-size: 28px;
