update player and dealer logic green success

--- a/src/components/BlackjackGame.css
+++ b/src/components/BlackjackGame.css
@@ -197,7 +197,7 @@ button:focus {
 .card {
   width: 100px;
   height: 150px;
-  margin: 10px;
+  margin: 20px;
   border-radius: 10px;
   background-color: white;
   position: relative;
@@ -250,4 +250,10 @@ button:focus {
   background-size: cover;
   border-radius: 10px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+}
+
+.winner .card {
+  box-shadow: 0 0 10px rgba(0, 255, 0, 0.7), 0 0 40px rgba(0, 255, 0, 0.5),
+    0 0 60px rgba(0, 255, 0, 0.3);
+  transition: box-shadow 0.5s ease;
 }
