--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,7 +27,7 @@ body {
 .toggle-rules-button {
   padding: 15px 30px;
   font-size: 18px;
-  background-color: #ffd700; 
+  background-color: #ffd700;
   color: black;
   border: 2px solid white;
   border-radius: 30px;
@@ -112,4 +112,29 @@ body {
     transform: scale(1);
     opacity: 1;
   }
+}
+
+.logout-button {
+  background: linear-gradient(45deg, #ffa500, #ff4500);
+  color: #ffffff;
+  padding: 15px 30px;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  font-size: 18px;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3), 0 5px 20px rgba(255, 140, 0, 0.5);
+  transition: all 0.3s ease;
+}
+
+.logout-button:hover {
+  background-color: #ff6347;
+  transform: scale(1.1);
+  box-shadow: 0 10px 30px rgba(255, 165, 0, 0.5),
+    0 10px 40px rgba(255, 140, 0, 0.7);
+}
+
+.logout-button:active {
+  transform: scale(0.98);
 }
