--- a/frontend/src/components/SignUp.css
+++ b/frontend/src/components/SignUp.css
@@ -5,7 +5,7 @@
   padding: 40px;
   border-radius: 12px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3),
-    0px 6px 30px rgba(255, 0, 150, 0.6);
+    0px 6px 30px rgba(0, 255, 234, 0.6);
   margin: auto;
   margin-top: 80px;
   text-align: center;
@@ -47,14 +47,14 @@
 }
 
 .signup-button {
-  background: linear-gradient(45deg, #ff0099, #ff6600);
+  background: linear-gradient(45deg, #09ff00, #0470fd);
   color: #ffffff;
   padding: 15px;
   border: none;
   border-radius: 50px;
   font-size: 18px;
   cursor: pointer;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2), 0 3px 10px rgba(255, 0, 150, 0.6);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2), 0 3px 10px rgba(224, 253, 220, 0.6);
   transition: all 0.3s ease;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -62,10 +62,9 @@
 }
 
 .signup-button:hover {
-  background: linear-gradient(45deg, #ff6600, #ff0099);
+  background: linear-gradient(45deg, #09ff00be, #0470fdb6);
   transform: scale(1.05);
-  box-shadow: 0 8px 20px rgba(255, 0, 150, 0.4),
-    0 3px 15px rgba(255, 0, 150, 0.8);
+  box-shadow: 0 8px 20px rgba(21, 255, 0, 0.4), 0 3px 15px rgba(27, 252, 6, 0.8);
 }
 
 .signup-google-button {
